<resources>
    <string name="app_name">FourBasicOpt</string>

    <string name="btn_clear">C</string>
    <string name="btn_backspace">⌫</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">−</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_equals">=</string>
    <string name="btn_dot">.</string>

    <string name="desc_backspace">지우기</string>
    <string name="desc_add">더하기</string>
    <string name="desc_subtract">빼기</string>
    <string name="desc_multiply">곱하기</string>
    <string name="desc_divide">나누기</string>

    <string name="error_divide_by_zero">0으로 나눌 수 없습니다</string>
</resources>
